<resources>
    <string name="app_name">MIT_health</string>
    <string name="main">TODO</string>
    <string name="member_title">회원가입</string>
    <string name="join_name">이름</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_id">아이디</string>
    <string name="valid_id">중복확인</string>
    <string name="login_pwv">비밀번호 확인</string>
    <string name="bu_man">남</string>
    <string name="bu_wo">여</string>
    <string name="join_birth">생년월일</string>
    <string name="main_birth">생년월일(990925)</string>
    <string name="join_">회원가입 완료하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_">회원 상세정보</string>
    <string name="save_">정보 저장하기</string>
    <string name="activity_ti">활동 정도</string>
    <string name="activity_1">활동 적음</string>
    <string name="activity_2">약간 활동적</string>
    <string name="activity_3">활동적</string>
    <string name="activity_4">매우 활동적</string>
    <string name="work">TODO</string>
    <string name="health_care">Health Care</string>
    <string name="work_main_">TODO</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="prompt_id">아이디</string>
    <string name="prompt_pw">비밀번호</string>
    <string name="login_pe">로그인하기</string>
    <string name="cm_d">신장(cm)</string>
    <string name="kg_d">몸무게(kg)</string>
    <string name="mem_ti">회원정보</string>


</resources>